Feat: add progress and levels
